--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <exec.mainClass>com.br.logging.Logging</exec.mainClass>
     </properties>
     
-   <dependencies>
+    <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
@@ -24,6 +24,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.15.2</version> <!-- Certifique-se de usar a versão mais recente -->
         </dependency>
     </dependencies>
     
