Atualização das classes de DBLog e DAO

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.47.0.0</version>
+        </dependency>
+        
     </dependencies>
     
     <name>loggingR</name>
