--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.47.0.0</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+   
     </dependencies>
     
     <name>loggingR</name>
