Refatoração das classes

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>opencsv</artifactId>
             <version>5.7.1</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.20</version>
+        </dependency>
    
     </dependencies>
     
